Reorganized a bit of code and added version verification